Updated to latest byte buddy version